test/message/test-error.out
file:///*/test-error.js:1:6
throw new Error('message');
      ^
Error: message
  at file:///*/test-error.js:1:7
  at ModuleJob.run (loader/module_job:*:*)
